--- a/sls/src/App.css
+++ b/sls/src/App.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
+
 .App {
   text-align: center;
+  font-family: 'Quicksand', sans-serif;
 }
 
 .App-header {
@@ -12,9 +15,30 @@
 
 .logo {
   max-height: 14vh;
+  padding-top: 2vh;
 }
 
 .header-text {
   font-size: 3vh;
-  font-weight: 500;
+  font-weight: 900;
+}
+
+.App-body {
+  margin: 4vh auto;
+}
+
+.container {
+  display: inline-flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.item {
+  width: 50%;
+  margin: auto;
+}
+
+img {
+  max-width: 100%;
+  overflow: hidden;
 }
