--- a/sls/src/App.css
+++ b/sls/src/App.css
@@ -6,28 +6,29 @@
 }
 
 .App-header {
-  max-height: 20vh;
+  height: auto;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(10px + 3vmin);
   color: black;
+  margin: 2vh auto;
 }
 
 .logo {
-  max-height: 14vh;
-  padding-top: 2vh;
+  max-height: calc(112px + 1vmin);
 }
 
 .header-text {
-  font-size: 3vh;
   font-weight: 900;
 }
 
 .App-body {
-  margin: 4vh auto;
+  margin: 1vh auto;
 }
 
 .container {
+  margin: 2vh auto;
+  max-width: 350px;
   display: inline-flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -38,7 +39,8 @@
   margin: auto;
 }
 
-img {
+/* washer images */
+.item > div > img {
   max-width: 100%;
   overflow: hidden;
 }
