--- a/sls/src/App.css
+++ b/sls/src/App.css
@@ -11,7 +11,7 @@
   justify-content: center;
   font-size: calc(10px + 3vmin);
   color: black;
-  margin: 2vh auto;
+  margin: 2vh auto 1vh auto;
 }
 
 .logo {
@@ -27,7 +27,7 @@
 }
 
 .container {
-  margin: 2vh auto;
+  margin: 1vh auto;
   max-width: 350px;
   display: inline-flex;
   flex-wrap: wrap;
